FIX 126140 a.auto-redirect display:none instead of visibility: hidden please

--- a/skins/default/application.scss
+++ b/skins/default/application.scss
@@ -3,7 +3,7 @@ html, body {
 }
 
 a.auto-redirect {
-	visibility: hidden;
+	display: none;
 }
 
 body {
